--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <h1>Welcome to Kevin's GitHub Page!</h1>
-    <a href="/contact.html"></a>
+    <a href="/contact.html">Contact</a>
     <p> This is the paragraph html portion</p>
     
 </body>
