--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <h1>Welcome to Kevin's GitHub Page!</h1>
+    <h1>Welcome to Kevin's webpage!</h1>
     <a href="/KevinsGitHub/contact.html">contact</a>
     <p> This is the paragraph html portion</p>
     
