--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <h1>Welcome to Kevin's webpage!</h1>
-    <a href="/KevinsGitHub/contact.html">contact</a>
+    <a href="/KevinsSite/contact.html">contact</a>
     <p> This is the paragraph html portion</p>
     
 </body>
