--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-    <h1>Welcome to Kevin's webpage!</h1>
+    <center>Welcome to Kevin's webpage!</center>
     <a href="/KevinsSite/contact.html">contact</a>
     <p> This is the paragraph html portion</p>
     
