--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <center>Welcome to Kevin's webpage!</center>
-    <a href="/KevinsSite/contact.html">contact</a>
-    <p> This is the paragraph html portion</p>
+    <a href="/KevinsSite/contact.html">Contact</a>
+    <p> Hi! Thanks for visiting my site, my name is Kevin Donnelly, I am a Product Manager passionate about building innnovative products clients love</p>
     
 </body>
 </html>
