--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <center>Welcome to Kevin's webpage!</center>
+    <h1>Welcome to Kevin's webpage!</h1>
     <a href="/KevinsSite/contact.html">Contact</a>
     <p> Hi! Thanks for visiting my site, my name is Kevin Donnelly, I am a Product Manager passionate about building innnovative products clients love</p>
     
